# torch_ga

./: PR_DESCRIPTION.md  SPHINX_INFRASTRUCTURE_ASSESSMENT.md  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: __init__.py  generate.py  graph.py
docs/: .gitignore  README.md
docs/source/: conf.py  index.rst
docs/source/api/: geometric_algebra.rst  index.rst  layers.rst  multivector.rst
docs/source/tutorials/: cuda.rst  quickstart.rst
tests/: test_torch_ga_fixes.py
torch_ga/: __init__.py  blades.py  cayley.py  jacobian.py  layers.py  mv.py  mv_ops.py  plots.py  torch_ga.py  transform.py  utils.py
torch_ga/clifford/: __init__.py  algebra.py  blades.py
